working login register index page

--- a/public/Team.html
+++ b/public/Team.html
@@ -2,8 +2,8 @@
         <html lang="en">
           <head>
             <meta charset="utf-8">
-            <link rel="stylesheet" href="/public/css/style.css">
-            <script src="/public/script/joinus.js"></script>
+            <link rel="stylesheet" href="css/style.css">
+            <script src="script/joinus.js"></script>
           </head>
           <body>
             <header class="header-banner" id="iq5u">
@@ -48,7 +48,7 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/GordianKnotClub/public/assets/Guo.png" class="badge-avatar"/>
+                    <img src="/public/assets/Guo.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Yanhao Guo
                       </div>
@@ -66,7 +66,7 @@
                   <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/GordianKnotClub/public/assets/tang.png" class="badge-avatar"/>
+                    <img src="/public/assets/tang.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ia2f6t">Ashley Tang
                       </div>
@@ -89,7 +89,7 @@
                 <div class="badge">
                     <div class="badge-header">
                     </div>
-                    <img src="/GordianKnotClub/public/assets/Eric.png" class="badge-avatar"/>
+                    <img src="/public/assets/Eric.png" class="badge-avatar"/>
                     <div class="badge-body">
                       <div class="badge-name" id="ip8fly">Eric Gu
                       </div>
