--- a/public/index.html
+++ b/public/index.html
@@ -12,26 +12,26 @@
     <div class="container-width" id="iq7f">
       <div class="logo-container" id="i60l"></div>
       <nav class="menu" id="icuu">
-        <a href="Team.html" class="menu-item-link">
+        <a href="/team" class="menu-item-link">
           <div class="menu-item" id="iraam">Team</div>
         </a>
-        <a href="Performance.html" class="menu-item-link">
+        <a href="/performance" class="menu-item-link">
           <div class="menu-item" id="iraam">Performance</div>
         </a>
-        <a href="strategy.html" class="menu-item-link">
+        <a href="/strategy" class="menu-item-link">
           <div class="menu-item" id="iraam">Strategies</div>
         </a>
-        <a href="posts.html" class="menu-item-link">
+        <a href="/posts" class="menu-item-link">
           <div class="menu-item" id="iraam">Posts</div>
         </a>
-        <a href="login.html" class="menu-item-link">
+        <a href="/login" class="menu-item-link">
           <div class="menu-item" id="iraam">Login</div>
         </a>
       </nav>
       <div class="clearfix"></div>
       <div class="lead-title" id="i3nxp">Gordian Knot Capital Club</div>
       <div class="sub-lead-title" id="ieg23">Embrace time's grace, navigate ambiguity's trace</div>
-      <button class="lead-btn" id="ij832">Join the team</button> <!-- Changed to a button -->
+      <button class="lead-btn" id="ij832">Join the team</button> 
     </div>
   </header>
   <section class="flex-sect" id="iviol">
