--- a/public/Performance.html
+++ b/public/Performance.html
@@ -2,7 +2,7 @@
         <html lang="en">
           <head>
             <meta charset="utf-8">
-            <link rel="stylesheet" href="/public/css/style.css">
+            <link rel="stylesheet" href="css/style.css">
           </head>
           <body>
             <header class="header-banner" id="iq5u">
@@ -86,6 +86,6 @@
               </div>
             </footer>
             <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-            <script src="/public/script/script.js"></script>
+            <script src="script/script.js"></script>
           </body>
         </html>
