--- a/public/posts.html
+++ b/public/posts.html
@@ -2,7 +2,7 @@
         <html lang="en">
           <head>
             <meta charset="utf-8">
-            <link rel="stylesheet" href="/public/css/style.css">
+            <link rel="stylesheet" href="css/style.css">
           </head>
           <body>
             <header class="header-banner" id="iq5u">
